(lang dune 3.16)

(name PROJECT_NAME)

(generate_opam_files true)

(authors "AUTHOR_NAME")

(maintainers "AUTHOR_NAME")

(using coq 0.9)

(package
 (name PROJECT_NAME)
 (synopsis "TODO")
 (description "")
 (allow_empty)
 (depends ocaml dune)
 (tags
  ("TODO" )))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
